--- a/index.html
+++ b/index.html
@@ -23,18 +23,34 @@
                 </div>
             </div>
             <div class="form-row">
-                <div class="form-group col-md-6">
-                    <label for="board">Board Cards (e.g., 6c2d8hJs3c):</label>
-                    <input type="text" class="form-control" id="board" name="board" value="6c2d8hJs3c">
+                <div class="col-md-6">
+                    <label>Fold EV: <span id="foldEvValue">-50.0000</span></label>
                 </div>
             </div>
             <div class="form-row">
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-4">
+                    <label for="board">Board Cards (e.g., 6c2d8hJs3c):</label>
+                    <input type="text" class="form-control" id="board" name="board" value="6c2d8hJs3c">
+                </div>
+                <div class="form-group col-md-2 d-flex align-items-end">
+                    <button type="button" class="btn btn-primary" id="randomBoardBtn">Random Board</button>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-4">
                     <label for="dead">Dead Cards (e.g., 5s5d):</label>
                     <input type="text" class="form-control" id="dead" name="dead" value="5s5d">
                 </div>
+                <div class="form-group col-md-2">
+                    <label for="numDead"># Random Dead:</label>
+                    <input type="text" class="form-control" id="numDead" name="numDead" value="10">
+                </div>
+                <div class="form-group col-md-2 d-flex align-items-end">
+                    <button type="button" class="btn btn-primary" id="randomDeadBtn">Random Dead</button>
+                </div>
             </div>
-            <button type="button" class="btn btn-primary" onclick="validateAndCalculate()">Calculate</button>
+            <button type="button" class="btn btn-primary" id="calculateBtn">Calculate EVs</button>
+            <button type="button" class="btn btn-primary" id="compareDeadBtn">Compare EVs for no Dead</button>
         </form>
 
         <div id="error-message" class="mt-2 text-danger"></div>
@@ -43,5 +59,6 @@
 
     <script src="phebundle.js"></script>
     <script src="calculate.js"></script>
+    <script src="events.js"></script>
 </body>
 </html>
