added hole cards

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </div>
             <div class="form-row">
                 <div class="form-group col-md-4">
-                    <label for="board">Board Cards (e.g., 6c2d8hJs3c):</label>
-                    <input type="text" class="form-control" id="board" name="board" value="6c2d8hJs3c">
+                    <label for="board">Board Cards:</label>
+                    <input type="text" class="form-control" id="board" name="board" value="6c2d8hJs3c" placeholder="">
                 </div>
                 <div class="form-group col-md-2 d-flex align-items-end">
                     <button type="button" class="btn btn-primary" id="randomBoardBtn">Random Board</button>
@@ -38,8 +38,8 @@
             </div>
             <div class="form-row">
                 <div class="form-group col-md-4">
-                    <label for="dead">Dead Cards (e.g., 5s5d):</label>
-                    <input type="text" class="form-control" id="dead" name="dead" value="5s5d">
+                    <label for="dead">Dead Cards:</label>
+                    <input type="text" class="form-control" id="dead" name="dead" value="" placeholder="">
                 </div>
                 <div class="form-group col-md-2">
                     <label for="numDead"># Random Dead:</label>
@@ -47,6 +47,12 @@
                 </div>
                 <div class="form-group col-md-2 d-flex align-items-end">
                     <button type="button" class="btn btn-primary" id="randomDeadBtn">Random Dead</button>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="hole">Hole Cards (optional):</label>
+                    <input type="text" class="form-control" id="holeCards" name="holeCards" value="" placeholder="">
                 </div>
             </div>
             <button type="button" class="btn btn-primary" id="calculateBtn">Calculate EVs</button>
