--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="form-row">
                 <div class="form-group col-md-4">
                     <label for="board">Board Cards:</label>
-                    <input type="text" class="form-control" id="board" name="board" value="6c2d8hJs3c" placeholder="">
+                    <input type="text" class="form-control" id="board" name="board" value="" placeholder="">
                 </div>
                 <div class="form-group col-md-2 d-flex align-items-end">
                     <button type="button" class="btn btn-primary" id="randomBoardBtn">Random Board</button>
